<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/edtTransactionReceipt"
                style="@style/edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/transaction_receipt"
                android:inputType="number" />

            <EditText
                android:id="@+id/edtEmail"
                style="@style/edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:imeOptions="actionSend"
                android:inputType="textEmailAddress" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_half"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnSubmit"
            style="@style/button_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin_half"
            android:layout_weight="1"
            android:text="@string/button_submit" />

        <Button
            android:id="@+id/btnClear"
            style="@style/button_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_half"
            android:layout_marginRight="@dimen/margin"
            android:layout_weight="1"
            android:text="@string/button_clear" />
    </LinearLayout>

</LinearLayout>