<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/app_background"
    android:orientation="vertical"
    android:padding="@dimen/margin" >

    <TextView
        android:id="@+id/txtTransactionType"
        style="@style/textview_receipt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:gravity="center"
        android:textSize="@dimen/textsize_xlarge"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <TextView
            style="@style/textview_receipt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receipt_mid" />

        <TextView
            android:id="@+id/txtReceiptMid"
            style="@style/textview_receipt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_half"
            android:layout_weight="1" />

        <TextView
            style="@style/textview_receipt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receipt_tid" />

        <TextView
            android:id="@+id/txtReceiptTid"
            style="@style/textview_receipt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_half" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/textview_receipt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receipt_time" />

        <TextView
            android:id="@+id/txtTime"
            style="@style/textview_receipt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:gravity="right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <TextView
            style="@style/textview_receipt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receipt_batch" />

        <TextView
            android:id="@+id/txtReceiptBatchNo"
            style="@style/textview_receipt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_weight="1" />

        <TextView
            style="@style/textview_receipt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receipt_no" />

        <TextView
            android:id="@+id/txtReceiptNo"
            style="@style/textview_receipt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtCardType"
            style="@style/textview_receipt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtCardNumber"
            style="@style/textview_receipt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtCardName"
        style="@style/textview_receipt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:orientation="horizontal" >

        <TextView
            style="@style/textview_receipt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receipt_expired" />

        <TextView
            android:id="@+id/txtExpiredDate"
            style="@style/textview_receipt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:gravity="right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/textview_receipt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receipt_ref_no" />

        <TextView
            android:id="@+id/txtReceiptRefNo"
            style="@style/textview_receipt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:gravity="right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/textview_receipt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receipt_appcode" />

        <TextView
            android:id="@+id/txtAppCode"
            style="@style/textview_receipt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:gravity="right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:orientation="horizontal" >

        <TextView
            style="@style/textview_receipt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receipt_base"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtBase"
            style="@style/textview_receipt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:gravity="right"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/textview_receipt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receipt_tip"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtTip"
            style="@style/textview_receipt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:gravity="right"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_half"
        android:orientation="horizontal" >

        <TextView
            style="@style/textview_receipt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receipt_total"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtTotal"
            style="@style/textview_receipt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:gravity="right"
            android:textStyle="bold" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/vgSignature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/textview_receipt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receipt_sign" />

            <ImageView
                android:id="@+id/imgSign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:background="#eeeeee"
                android:contentDescription="@null"
                android:minHeight="32dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <View
                android:layout_width="1dp"
                android:layout_height="1dp" />

            <TextView
                android:id="@+id/txtSignatureName"
                style="@style/textview_receipt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Done" />

</LinearLayout>