<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtMessage"
        style="@style/textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/vgHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_ab_background"
        android:orientation="vertical"
        android:padding="@dimen/margin" >

        <TextView
            android:id="@+id/txtMerchant"
            style="@style/textview_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtTransactionType"
            style="@style/textview_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/vgRequestTransaction"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/margin" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pos_serial_id_title"
                android:textColor="@color/textcolor_secondary" />

            <TextView
                android:id="@+id/txtSerialId"
                style="@style/textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_half"
                android:textColor="@color/textcolor_secondary" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pos_merchant_id_title"
                android:textColor="@color/textcolor_secondary" />

            <TextView
                android:id="@+id/txtMerchantId"
                style="@style/textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_half"
                android:textColor="@color/textcolor_secondary" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pos_terminal_id_title"
                android:textColor="@color/textcolor_secondary" />

            <TextView
                android:id="@+id/txtTerminalId"
                style="@style/textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_half"
                android:textColor="@color/textcolor_secondary" />
        </TableRow>

        <TextView
            style="@style/textview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:gravity="center"
            android:text="@string/request_transaction"
            android:textSize="@dimen/textsize_xlarge" />
    </TableLayout>

    <LinearLayout
        android:id="@+id/vgReprint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/item_receipt" />
        </ScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#cc31b4e3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnSign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="100dp"
                android:text="Sign" />

            <Button
                android:id="@+id/btnDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="100dp"
                android:text="Done" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>